--- a/appsettings.json
+++ b/appsettings.json
@@ -1,12 +1,21 @@
 {
-  "ConnectionStrings": {
-    "SqliteDb": "Data Source=MyDatabase.db"
-  },
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
-    }
-  },
-  "AllowedHosts": "*"
+    "ConnectionStrings": {
+        "SqliteDb": "Data Source=MyDatabase.db"
+    },
+    "Logging": {
+        "LogLevel": {
+            "Default": "Information",
+            "Microsoft.AspNetCore": "Warning"
+        }
+    },
+    "AllowedHosts": "*"
+}
+{
+    "Jwt": {
+        "Key": "malika",
+        "Issuer": "assylgazy",
+        "Audience": "student",
+        "DurationInMinutes": 60
+    },
+    "..."
 }
